--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "types": [
       "webpack-env",
       "jest",
-      "element-plus/global"
+      "element-plus/global",
+      "node"
     ],
     "paths": {
       "@/*": [
